--- a/src/pages/management-app/planner/main/main.html
+++ b/src/pages/management-app/planner/main/main.html
@@ -2,7 +2,7 @@
     <nl-navbar [title]="viewTitle"></nl-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="csGrayBackground">
 
     <ng-template #template>
         <ion-item *ngIf="currentDateSelected?.events.length==0 && !showSpinner">
