--- a/src/pages/management-app/poll/newPoll/newPoll.html
+++ b/src/pages/management-app/poll/newPoll/newPoll.html
@@ -121,13 +121,13 @@
                 </ion-item>
             </ion-card>
         </div>
-
+   
         <div *ngIf=" mainAudience?.id == 4 && yearForModule ">
             <ion-card>
                 <ion-item>
                     <ion-label><b>Select Modules</b></ion-label>
                     <ion-select [(ngModel)]="moduleIds" multiple required name="years">
-                        <ion-option *ngFor="let module of modulesObject[yearForModule.id || yearForModule.yearId]" [value]="module.moduleId">{{module.moduleName}}</ion-option>
+                        <ion-option *ngFor="let module of modulesObject[yearForModule.id || yearForModule.yearId]" [value]="module.moduleId || module.id">{{module.moduleName || module.name}}</ion-option>
                     </ion-select>
                 </ion-item>
             </ion-card>
