--- a/src/pages/management-app/planner/edit/edit.html
+++ b/src/pages/management-app/planner/edit/edit.html
@@ -3,54 +3,82 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-   
-   
 
 
-        <ion-card>
-            <ion-item>
-                <ion-label stacked>Title</ion-label>
-                <ion-textarea [(ngModel)]="eventNew.title"  maxlength="50" placeholder="Enter Title"></ion-textarea>
+
+
+    <ion-card>
+        <ion-item>
+            <ion-label stacked>Title</ion-label>
+            <ion-textarea [(ngModel)]="eventNew.title" maxlength="50" placeholder="Enter Title"></ion-textarea>
+        </ion-item>
+        <ion-badge class="csFiftyLimit">
+            <span>{{50 - eventNew.title?.length}}</span>
+        </ion-badge>
+    </ion-card>
+
+    <ion-card>
+        <ion-item>
+            <ion-label stacked>Description</ion-label>
+            <ion-textarea [(ngModel)]="eventNew.description" rows="3" maxlength="2500" placeholder="Enter Description"></ion-textarea>
+        </ion-item>
+        <ion-badge class="csFiftyLimit">
+            <span>{{2500 - eventNew.description?.length}}</span>
+        </ion-badge>
+    </ion-card>
+
+    <ion-card>
+        <ion-item>
+            <ion-label>Event Start</ion-label>
+            <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="eventNew.start" (ionChange)="onEndDateChange()" [min]="minDate"
+                max="2019"></ion-datetime>
+        </ion-item>
+
+        <ion-item>
+            <ion-label>Event End</ion-label>
+            <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="eventNew.end" (ionChange)="onEndDateChange()" [min]="minDate"
+                max="2019"></ion-datetime>
+        </ion-item>
+    </ion-card>
+
+    <ion-card>
+        <ion-item>
+            <ion-label stacked>Location (Optional)</ion-label>
+            <ion-textarea [(ngModel)]="eventNew.location" maxlength="100" placeholder="Enter Location"></ion-textarea>
+        </ion-item>
+        <ion-badge class="csFiftyLimit">
+            <span>{{100 - eventNew.location?.length}}</span>
+        </ion-badge>
+    </ion-card>
+
+    <div *ngIf="eventNew.fileCount>0">
+
+        <h4>Attachments:</h4>
+        <ion-list>
+            <ion-item text-wrap *ngFor="let file of eventNew.files;let i = index">
+                {{file.fileOriginalName}}
+                <button ion-button clear (click)="onDeleteFile(file,i)">Delete</button>
             </ion-item>
-            <ion-badge class="csFiftyLimit">
-                <span>{{50 - eventNew.title?.length}}</span>
-            </ion-badge>
-        </ion-card>
+        </ion-list>
 
-        <ion-card>
-            <ion-item>
-                <ion-label stacked>Description</ion-label>
-                <ion-textarea [(ngModel)]="eventNew.description" rows="3" maxlength="2500" placeholder="Enter Description"></ion-textarea>
-            </ion-item>
-            <ion-badge class="csFiftyLimit">
-                <span>{{2500 - eventNew.description?.length}}</span>
-            </ion-badge>
-        </ion-card>
+    </div>
 
-        <ion-card>
-            <ion-item>
-                <ion-label>Event Start</ion-label>
-                <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="eventNew.start" (ionChange)="onEndDateChange()" [min]="minDate"
-                    max="2019" ></ion-datetime>
-            </ion-item>
+    <button type="button" col-3 ion-button clear (click)="onAddFile()">Add File</button>
+    <button type="button" col-3 ion-button clear (click)="onFileUnselect()" *ngIf="image || file">Unselect</button>
+    <button type="button" col-3 ion-button clear (click)="onUploadFile()" *ngIf="image || file">Upload</button>
+    
+    <ion-spinner name="bubbles" *ngIf="showSpinner"></ion-spinner>
 
-            <ion-item>
-                <ion-label>Event End</ion-label>
-                <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="eventNew.end" (ionChange)="onEndDateChange()" [min]="minDate"
-                    max="2019" ></ion-datetime>
-            </ion-item>
-        </ion-card>
+    <ion-card *ngIf="image">
+        Image Preview
 
-        <ion-card>
-            <ion-item>
-                <ion-label stacked>Location (Optional)</ion-label>
-                <ion-textarea [(ngModel)]="eventNew.location"  maxlength="100" placeholder="Enter Location"></ion-textarea>
-            </ion-item>
-            <ion-badge class="csFiftyLimit">
-                <span>{{100 - eventNew.location?.length}}</span>
-            </ion-badge>
-        </ion-card>
+        <img [src]="image" alt="Image File">
+    </ion-card>
 
-        <button ion-button full [disabled]="!isEndGreaterThanStart" (click)="onEditBtn()">EDIT</button>
+    <h2 *ngIf="file && fileName">
+        Attached File: {{fileName}}
+    </h2>
+
+    <button ion-button full [disabled]="!isEndGreaterThanStart" (click)="onEditBtn()">EDIT</button>
 
 </ion-content>
