new assessment(both) done

--- a/src/pages/management-app/assessment/summative/summative.html
+++ b/src/pages/management-app/assessment/summative/summative.html
@@ -7,7 +7,7 @@
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher> -->
 ssssssssss
-    <ion-fab right bottom>
+    <ion-fab #fab right bottom>
         <button ion-fab color="danger" >
             <ion-icon name="add"></ion-icon>
         </button>
