--- a/src/pages/management-app/assessment/formative/formative.html
+++ b/src/pages/management-app/assessment/formative/formative.html
@@ -17,6 +17,11 @@
         </button>
     </ion-list>
 
+    <ion-list class="no-comment" *ngIf="assessmentList?.length==0">
+            <ion-icon name="list-box"></ion-icon>
+            <br>NO RECORD FOUND
+        </ion-list>
+
     <ion-fab #fab right bottom>
         <button ion-fab color="danger">
             <ion-icon name="add"></ion-icon>
