logintype check removed in timetable html

--- a/src/pages/management-app/timeTable/main/main.html
+++ b/src/pages/management-app/timeTable/main/main.html
@@ -19,11 +19,11 @@
 <ion-content class="background1">
     <ion-list>
         <ion-list-header>
-            {{todayDate |  amDateFormat: 'LL'}}
+            {{todayDate | amDateFormat: 'LL'}}
         </ion-list-header>
         <ion-list no-lines>
             <ion-item-sliding *ngFor="let period of selectedDayTimetable">
-                <button ion-item class="timetable-item" >
+                <button ion-item class="timetable-item">
                     <ion-grid no-padding>
                         <ion-row>
                             <ion-col col-4 class="border border-right-progress left-col" text-right>
@@ -34,16 +34,14 @@
                                 </div>
                             </ion-col>
                             <ion-col col-8 col-8 class="border border-left-progress right-col">
-                                <h2 class="textLarge">{{period.moduleName}}</h2>
-                                <span *ngIf="loginType=='management'" class="textGray">
-                                    <ion-icon name="folder"></ion-icon> 
-                                    {{period.programName}}
+                                <span>
+                                    <ion-icon name="folder"></ion-icon>
+                                    <p class="textLarge">{{period.moduleName}}</p>
                                 </span>
-                                <span *ngIf="loginType=='student'" class="textGray">
-                                        <ion-icon name="person"></ion-icon> 
-                                        {{period.employeeName}}
-                                    </span>
-                                <div *ngIf="loginType=='management'">
+                                <span class="textGray">
+                                    {{period.programName}}
+                                </span>  
+                                <div>
                                     <span class="textSmall">
                                         <b>{{period.yearName}} year</b>
                                     </span>
@@ -75,8 +73,8 @@
             </ion-item-sliding>
         </ion-list>
 
-    </ion-list> 
+    </ion-list>
 
-     <!-- NEW TIME TABLE BUTTON -->
-     <button ion-button (click)="createNewTimeTable()">CREATE </button>
+    <!-- NEW TIME TABLE BUTTON -->
+    <button ion-button (click)="createNewTimeTable()">CREATE </button>
 </ion-content>
