--- a/src/pages/management-app/assignment/new/new.html
+++ b/src/pages/management-app/assignment/new/new.html
@@ -24,7 +24,7 @@
                 <ion-label>
                     <b>Select Year</b>
                 </ion-label>
-                <ion-select [(ngModel)]="year" (ionChange)="onYearChange()" required name="year">
+                <ion-select [disabled]="myDisabled" [(ngModel)]="year" (ionChange)="onYearChange()" required name="year">
                     <ion-option *ngFor="let y of yearList" [value]="y">{{y.name || y.yearName}} </ion-option>
                 </ion-select>
             </ion-item>
@@ -36,7 +36,7 @@
                 <ion-label>
                     <b>Select Modules</b>
                 </ion-label>
-                <ion-select [(ngModel)]="module" required name="module">
+                <ion-select [disabled]="myDisabled" [(ngModel)]="module" required name="module">
                     <ion-option *ngFor="let module of modulesObject[year.id || year.yearId]" [value]="module">{{module.moduleName || module.name}}</ion-option>
                 </ion-select>
             </ion-item>
