--- a/src/pages/management-app/attendance/new/new.html
+++ b/src/pages/management-app/attendance/new/new.html
@@ -6,17 +6,40 @@
 
     <ion-card>
         <ion-label> Module: {{timeTableInfo.moduleName}}</ion-label>
-    </ion-card>
-
-    <ion-card>
         <ion-label> Year: {{timeTableInfo.yearName}}</ion-label>
     </ion-card>
 
-    <ion-card>
-        <ion-item>
-            <ion-label>Date </ion-label>
-            <ion-datetime [max]="todayDate()" [(ngModel)]="selectedDate" displayFormat="MMM DD YYYY" pickerFormat="DD MMM YYYY"></ion-datetime>
-        </ion-item>
-    </ion-card>
 
+    <form #newAttendanceForm="ngForm" (ngSubmit)="onSubmit()">
+
+        <ion-card>
+            <ion-item>
+                <ion-label>Date </ion-label>
+                <ion-datetime [max]="selectedDate" [(ngModel)]="selectedDate" displayFormat="MMM DD YYYY" pickerFormat="DD MMM YYYY" name="date"></ion-datetime>
+            </ion-item>
+        </ion-card>
+
+        <ion-card>
+            <div *ngFor="let student of studentsList;let i=index">
+                <ion-label> {{student.name}} </ion-label>
+                <ion-list radio-group [(ngModel)]="student.attendance" name="attendance{{i}}">
+                    <ion-item>
+                        <ion-label>P</ion-label>
+                        <ion-radio value="P"></ion-radio>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>A</ion-label>
+                        <ion-radio value="A"></ion-radio>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>L</ion-label>
+                        <ion-radio value="L"></ion-radio>
+                    </ion-item>
+
+                </ion-list>
+            </div>
+        </ion-card>
+
+        <button ion-button full type="submit">SUBMIT</button>
+    </form>
 </ion-content>
